feat(API): Added AuthorizationMiddleware
